// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component tests Radio default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Select",
      },
    ]
  }
  accessibilityLabel="Default Radio"
  accessibilityPositionInSet={0}
  accessibilityRole="radio"
  accessibilitySetSize={0}
  accessibilityState={
    Object {
      "disabled": false,
      "selected": false,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={true}
  focusable={true}
  labelPosition="after"
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "paddingHorizontal": 4,
    }
  }
  value="key1"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#616161",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "marginBottom": 6,
        "marginLeft": 4,
        "marginRight": 6,
        "marginTop": 6,
        "width": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 5,
          "height": 10,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "flexDirection": "column",
        "marginLeft": 0,
        "marginRight": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        Object {
          "color": "#616161",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "margin": 0,
          "marginTop": 5,
        }
      }
    >
      Default Radio
    </Text>
  </View>
</View>
`;

exports[`Radio component tests Radio disabled 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Select",
      },
    ]
  }
  accessibilityLabel="Disabled Radio"
  accessibilityPositionInSet={0}
  accessibilityRole="radio"
  accessibilitySetSize={0}
  accessibilityState={
    Object {
      "disabled": true,
      "selected": false,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={true}
  focusable={false}
  labelPosition="after"
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "paddingHorizontal": 4,
    }
  }
  value="key1"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#bdbdbd",
        "borderRadius": 10,
        "borderStyle": "solid",
        "borderWidth": 1,
        "height": 20,
        "justifyContent": "center",
        "marginBottom": 6,
        "marginLeft": 4,
        "marginRight": 6,
        "marginTop": 6,
        "width": 20,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "borderRadius": 5,
          "height": 10,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "alignSelf": "flex-start",
        "flexDirection": "column",
        "marginLeft": 0,
        "marginRight": 2,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        Object {
          "color": "#bdbdbd",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "400",
          "margin": 0,
          "marginTop": 5,
        }
      }
    >
      Disabled Radio
    </Text>
  </View>
</View>
`;
